am0300st/deploy/deploy.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: modresorts-app-twas
    name: modresorts-app-twas
  spec:
    replicas: 1
    selector:
      app: modresorts-app-twas
      deploymentconfig: modresorts-app-twas
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: modresorts-app-twas
          deploymentconfig: modresorts-app-twas
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/am0300/modresorts-twas:latest
          name: modresorts-app-twas
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - modresorts-app-twas
        from:
          kind: ImageStreamTag
          name: modresorts-twas:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
kind: List
metadata: {}
